# cuPSS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: alc.cpp  allen-cahn.cu  cahn-hilliard-boundary.cpp  cahn-hilliard.cpp  cahn-hilliard3D.cpp  diffusion.cpp  modelb.cpp  modelb_parser.cpp  modelh.cpp  modelh.in  modelh_base.cpp  modelh_base_boundary.cpp  modelh_explicit_velocity.cpp  modelh_parser.cpp  modelh_pressure.cpp  read_system_file.cpp  template.cpp  test.cpp
examples/01_diffusion/: 01_diffusion.cpp  README.md
examples/02_cahn_hilliard/: 02_cahn-hilliard.cpp  README.md
examples/03_cahn_hilliard_3d/: 03_cahn_hilliard_3d.cpp  README.md
examples/03_chan_hilliard_3d/: README.md
examples/04_model_h/: README.md
examples/05_edwards_wilkinson/: 05_edwards_wilkinson.cpp  README.md
examples/06_kpz/: 06_kpz.cpp  README.md
examples/07_inhomogeneous_diffusion/: 07_inhomogeneous_diffusion.cu  README.md
examples/08_neumann_dirichlet_bc/: 08_boundaries.cpp  08_dirichlet.cpp  README.md
inc/: cupss.h  defines.h  evolver.h  field.h  field_kernels.cuh  parser.h  solver.h  term.h  term_kernels.cuh
inc/cupss/: boundary.h  boundary_kernels.cuh  cu_utils.h  defines.h  evolver.h  field.h  field_kernels.cuh  parser.h  term.h  term_kernels.cuh
src/: boundary.cu  boundary_kernals.cu  boundary_kernels.cu  cu_utils.cpp  cu_utils.cu  evolver.cpp  evolver.cu  field.cpp  field.cu  field_init.cpp  field_init.cu  field_kernels.cu  initializers.cpp  initializers.cu  parser.cpp  parser.cu  term.cpp  term.cu  term_init.cpp  term_init.cu  term_kernels.cu
tests/: tests.cpp
tests/base_truths/: invqphi_cpu_1d  invqphi_cpu_3d  invqphi_gpu_3d  iqxphi_cpu_1d  iqxphi_cpu_3d  iqxphi_gpu_1d  iqxphi_gpu_3d  iqyphi_cpu_3d  iqyphi_gpu_3d  iqzphi_cpu_3d  iqzphi_gpu_3d  lapphi_cpu_1d  lapphi_cpu_3d  lapphi_gpu_3d  phi_1d  phi_2d  phi_3d
